[tool.poetry]
name = "libml_URLPhishing"
version = "0.1.1"
description = "Library to download and process data for the URL phishing project"
authors = ["Shantnav Agarwal"]
readme = "ReadMe.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "2.16.1"
joblib = "1.4.2"
scikit-learn = "1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "libml"